# docuflow

./: .gitignore  APIFY_ONLY_COMPLETE.md  APIFY_ONLY_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FINAL_APIFY_ONLY_SUMMARY.md  FINAL_COMPLETION_CERTIFICATE.md  FREIGHT_README.md  IMPLEMENTATION_SUMMARY.md  LEAD_MAGNET_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  README.md  SARAH_AI_FINAL_IMPLEMENTATION.md  SARAH_AI_LEAD_MAGNET_COMPLETE.md  TRANSFORMATION_SUMMARY.md  apify.md  docker-compose.yml  mock_server.py  package.json  pnpm-lock.yaml  prd.md  test-local.sh  test_apify_actor_n8n_ready.py  test_docling.py  test_freight_auditor_functionality.py  test_validation_logic.py  validate_apify_implementation.py  verify_lead_magnet_phase.py  verify_transformation.py
apify/: Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  INPUT.json  README.md  TRANSFORMATION_SUMMARY.md  VALIDATION_SUMMARY.md  actor.json  actor.py  api_endpoints.ts  email_worker.ts  package.json  processing_engine.py  requirements.txt  schema.sql  sync_worker.ts  test_apify_integration.py  (+8 more)
docuflow-engine/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_agentic.py  test_core.py  test_e2e.py  test_error_handling.py  test_imports.py  test_operability.py  test_validation.py
docuflow-engine/utils/: compression.py  gdrive.py
engine/: Dockerfile  Dockerfile.test  README.md  freight_auditor.py  google_sheets.py  main.py  main_new.py  pyproject.toml  requirements.txt  test.py  test_integration.py  test_ocr_service.py  verify_transformation.py
engine/services/: llm_service.py  ocr_service.py
(+81 files in other folders)
