[project]
name = "structurize-engine"
version = "0.1.0"
description = "Python AI engine for Structurize email-to-spreadsheet processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-ai",
    "docling",
    "httpx",
    "loguru",
    "backoff",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pillow",
    "pikepdf",
    "img2pdf",
    "python-multipart",
    "reportlab",
    "pytest>=9.0.2",
    "redis>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
